# bugninja

./: .env.example  .gitignore  10_comprehensive_test.py  11_multi_tab_setup.py  1_simple_navigation.py  2_simple_navigation_with_replay.py  3_comparison.py  3_mobile_viewport.py  4_self_healing.py  5_secrets.py  6_extra_rules_navigation.py  7_secrets_scrolling_replay.py  8_advanced_interactions_replay.py  9_advanced_self_healing copy.py  CLI_USAGE.md  CONFIGURATION.md  README.md  _7_comparison.py  agent_navigation_prompts.py  bestbyte_1_registration.py  bestbyte_2_complex_buy_with_replay.py  bestbyte_3_halfway_log_in.py  bugninja_.toml  bugninja_cli.py  celery_tasks.py  db_plan.md  debug_colors.py  docker-compose.yaml  docker-compose.yml  env.example  example_usage.py  headless_test.py  main.py  parallel_run_try.py  pyproject.toml  replay.py  sonar_scanner.sh  test_custom_video_recording.py  test_styling.py  tippmix_flow.py
.cursor/rules/: bugninja-ai-project.mdc  impersonation-system-prompt.mdc  python.mdc
atomic-steps/: DESIGN_V1.md
atomic-steps/bugninja_v1_bad_approach/: README.md  config.py  main.py  requirements.txt
atomic-steps/bugninja_v2/: ai_client.py  element_selector.py  main.py  requirements.txt
atomic-steps/bugninja_v3/: main.py
browser-use-experiments/: agent_navigation_prompts.py  main.py  pyproject.toml  replay.py  schemas.py  test_xpath_selectors.py
browser-use-experiments/plans/: replicator_description.md
browser-use-experiments/scenarios/: emag_01_traversal.md  emag_02_disrupted_purchase.md  scenarios.md
browser-use-experiments/scenarios/evaluations/: emag.md
browser-use-experiments/src/: ai_models.py  custom_agent.py  custom_controller.py  replicator.py  selector_factory.py
browser-use-experiments/src/agents/: healer_agent.py  navigator_agent.py
browser-use-experiments/src/prompts/: agent_navigation_prompts.py
browser_data/: Local State
browser_data/Default/: BrowsingTopicsState  DIPS  History  Network Persistent State  Preferences  Secure Preferences  Top Sites  TransportSecurity  Web Data
browser_data/GrShaderCache/: index
browser_data/GraphiteDawnCache/: data_0  data_1  data_2  index
browser_data/ShaderCache/: data_1  index
browser_data/segmentation_platform/: ukm_db
bugninja/: __init__.py
bugninja/agents/: __init__.py  bugninja_agent_base.py  data_extraction_agent.py  extensions.py  healer_agent.py  navigator_agent.py  test_case_analyzer.py  test_case_creator.py  test_case_generator.py
bugninja/api/: __init__.py  bugninja_pipeline.py  client.py  exceptions.py  models.py  pipeline.py
bugninja/cli/: __init__.py  main.py  parser.py
bugninja/config/: __init__.py  environments.py  error_handler.py  factory.py  llm.py  llm_config.py  llm_creator.py  llm_factory.py  provider_registry.py  settings.py  toml_loader.py  video_recording.py
bugninja/events/: __init__.py  base.py  exceptions.py  factory.py  manager.py  models.py  publishers.py  types.py
bugninja/models/: __init__.py  model_configs.py
bugninja/prompts/: __init__.py  data_extraction_prompt.md  extra_instructions_prompt.md  extra_rules_prompt.md  file_upload_prompt.md  healer_agent_extra_sytem_prompt.md  healer_agent_passed_brainstates_prompt.md  input_schema_prompt.md  io_extraction_prompt.md  navigator_agent_system_prompt.md  prompt_factory.py  state_comp_user_prompt.md  test_case_analyzer_system_prompt.md  test_case_analyzer_user_prompt.md  test_case_creator_system_prompt.md  test_case_creator_user_prompt.md  test_case_generator_system_prompt.md  test_case_generator_user_prompt.md  third_party_auth_handler_prompt.md
bugninja/replication/: __init__.py  errors.py  replicator_navigation.py  replicator_run.py
bugninja/schemas/: __init__.py  cli_schemas.py  models.py  pipeline.py  progress.py  test_case_creation.py  test_case_import.py  test_case_io.py
bugninja/utils/: __init__.py  custom_video_recorder.py  logging_config.py  progress_monitor.py  progress_tracker.py  prompt_string_factories.py  recorder.py  screenshot_manager.py  selector_factory.py  tab_aware_session.py  tab_context.py  video_recording_manager.py
bugninja_cli/: __init__.py  __main__.py  add.py  cleanup.py  import_cmd.py  init.py  main.py  platform.py  replay.py  run.py  stats.py
bugninja_cli/commands/: __init__.py  doctor.py  list.py  replay.py  run.py  status.py
bugninja_cli/themes/: __init__.py  colors.py
bugninja_cli/utils/: __init__.py  ascii_art.py  completion.py  display.py  error_handler.py  initialization.py  jira_integration.py  pipeline_executor.py  project_validator.py  redmine_integration.py  replay_metadata.py  result_display.py  retention_policy_manager.py  run_history_manager.py  stats_collector.py  style.py  task_executor.py  task_lookup.py  task_manager.py  task_resolver.py
bugninja_platform/: EXECUTION_FLOW.md  EXECUTION_ISSUE.md  FRONTEND_API_SPEC.md  FRONTEND_SETUP.md  IMPLEMENTATION_LOG.md  README.md  SCHEMA_COMPARISON.md  __init__.py
bugninja_platform/backend/: __init__.py  main.py
bugninja_platform/frontend/: ADAPTATION_PLAN.md
documentation/: db.md
install/: install-linux.sh  install-mac.sh
mobile_experimentation/: android_inspector.py
mobile_experimentation/experimentation_sources/: auto_gmail_complete_v2.py  azure_agent.py  device_connector_v2.py
scenarios/: scenarios.md
scenarios/evaluations/: emag.md
src/: __init__.py  background_queue_management.py  replicator.py  replicator_navigation.py  replicator_run.py  schemas.py
src/agents/: bugninja_agent_base.py  common.py  custom_controller.py  extensions.py  (+2 more)
states/: state_0d5aa751-3fe5-4b44-8537-ec155fb0fa52.json  state_1592d0d1-d382-434d-b8f5-9377d132ff60.json  state_24516ffa-66a3-467e-b923-8dc78472fce8.json  state_350b114a-9030-4e71-95bd-67555935fd4e.json  state_65c982c3-e4c3-41f8-908a-474e45b08167.json  state_71605228-8f20-43ba-a38e-7aa38244bfec.json  state_75cf8642-5774-469f-a3ba-9a25c3bd8dcd.json  state_8ad28d15-6710-404d-a88d-b0bede67c700.json  state_9d62f285-7dc0-4c43-828e-7d9cd2670ceb.json  state_be2552b9-e936-4dde-94f9-13818100d2f3.json
tasks/: bacprep_task.md  erste_task.md
(+125 files in other folders)
