[project]
name = "browser-use-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==25.1.0",
    "browser-use[memory]==0.2.5",
    "celery[redis]==5.5.3",
    "cssselect==1.3.0",
    "cuid2==2.0.1",
    "faker==37.4.0",
    "fastapi==0.115.13",
    "isort==6.0.1",
    "lxml==5.4.0",
    "mypy==1.16.0",
    "openai==1.84.0",
    "pydantic==2.10.6",
    "python-dotenv==1.1.0",
    "rich==14.0.0",
    "ruff==0.11.13",
    "types-lxml==2025.3.30",
]


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"] # ignore unused imports in __init__.py files
"test_*.py" = ["F401", "F403", "F811"]  # ignore unused imports in test files as well

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]

[tool.mypy]
python_version = "3.13"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true


[tool.poe.tasks]

#? Development related commands
[tool.poe.tasks.run]
help   = "Start test traversal agent interaction"
shell = "uv run python main.py"

[tool.poe.tasks.replay]
help   = "Replay (and potentially heal if necessary) the last saved traversal"
shell = "uv run python replay.py"

[tool.poe.tasks.lint]
help   = "Lints the whole project searching for inefficiencies in the code"
shell = "uv run ruff check --fix . && uv run isort . && uv run black . && uv run mypy main.py src"


[tool.poe.tasks.run-celery]
help   = "Start Celery worker for task queuing"
shell = "uv run celery -A celery_tasks worker --loglevel=INFO"


